Added schema definition
